--- a/Lessons/03_CodingBasics.Rmd
+++ b/Lessons/03_CodingBasics.Rmd
@@ -36,78 +36,91 @@ vector2
 vector3 <- c(TRUE,TRUE,TRUE,FALSE,TRUE,FALSE) #logical vector
 vector3
 
-vector1[3] # 
+vector1[3] # The third number in vector1
 
 # Matrices ----
 matrix1 <- matrix(1:20, nrow = 5,ncol = 4) # 
 matrix1
-matrix2 <- matrix(1:20, nrow = 5, ncol = 4, byrow = TRUE) #
+matrix2 <- matrix(1:20, nrow = 5, ncol = 4, byrow = TRUE) # matrix is filled by rows
 matrix2
 matrix3 <- matrix(1:20, nrow = 5, ncol = 4, byrow = TRUE, # return after comma continues the line
                   dimnames = list(c("uno", "dos", "tres", "cuatro", "cinco"), 
-                                  c("un", "deux", "trois", "cat"))) #
-
-matrix1[4, ] #
-matrix1[ , 3] #
-matrix1[c(12, 14)] #
-matrix1[c(12:14)] #
-matrix1[2:4, 1:3] #
+                                  c("un", "deux", "trois", "cat"))) # dimensions names by rows, then by columns
+matrix3 # can type in console directly
+matrix1[4, ] # 4th row
+matrix1[ , 3] # 3rd column
+matrix3[c(12, 14)] # position 12 and 14
+matrix3[c(12:14)] # from position 12 to 14
+matrix1[2:4, 1:3] # choose row from 2 to 4, and column 1 to 3
 
 cells <- c(1, 26, 24, 68)
 rnames <- c("R1", "R2")
 cnames <- c("C1", "C2") 
 matrix4 <- matrix(cells, nrow = 2, ncol = 2, byrow = TRUE,
-  dimnames = list(rnames, cnames)) # 
+  dimnames = list(rnames, cnames)) # Label all the row, column, and values
 matrix4
 
 # Lists ---- 
 list1 <- list(name = "Maria", mynumbers = vector1, mymatrix = matrix1, age = 5.3); list1
 list1[[2]]
+list1[[3]]
 
 # Data Frames ----
-d <- c(1, 2, 3, 4) # What type of vector?
-e <- c("red", "white", "red", NA) # What type of vector?
-f <- c(TRUE, TRUE, TRUE, FALSE) # What type of vector?
-dataframe1 <- data.frame(d,e,f) #
-names(dataframe1) <- c("ID","Color","Passed"); View(dataframe1) # 
+d <- c(1, 2, 3, 4) # What type of vector? numeric
+e <- c("red", "white", "red", NA) # What type of vector? character
+f <- c(TRUE, TRUE, TRUE, FALSE) # What type of vector? logic
+dataframe1 <- data.frame(d,e,f) # define daframe1
+names(dataframe1) <- c("ID","Color","Passed"); 
+View(dataframe1) # use names function to give name for each column
 
-dataframe1[1:2,] # 
-dataframe1[c("ID","Passed")] # 
-dataframe1$ID
+dataframe1[1:2,] # calling rows 1 through 2
+dataframe1[c("ID","Passed")] # calling column ID and passed
+dataframe1$ID #calling specific columns
 
 ```
 Question: How do the different types of data appear in the Environment tab?
 
-> Answer: 
+> Answer: dataframe, list, value
 
 Question: In the R chunk below, write "dataframe1$". Press `tab` after you type the dollar sign. What happens?
 
-> Answer: 
+> Answer: show the column name after press 'tab' in chunk
 
 ### Coding challenge
 
 Find a ten-day forecast of temperatures (Fahrenheit) for Durham, North Carolina. Create two vectors, one representing the high temperature on each of the ten days and one representing the low.
 
 ```{r}
-
+dataframe1$ID;
+HighCelsius<-c(20,20,21,21,22,22,24,25,25,26)
+HighCelsius
+LowCelsius<-c(-2,-2,-1,-1,0,0,0,0,0,2)
+LowCelsius
 ```
 
 Now, create two additional vectors that include the ten-day forecast for the high and low temperatures in Celsius.
 
 ```{r}
-
+HighFahrenheit<-(HighCelsius*9/5)+32
+HighFahrenheit
+LowFahrenheit<-(LowCelsius*9/5) + 32
+LowFahrenheit
 ```
 
 Combine your four vectors into a data frame and add informative column names.
 
 ```{r}
+dataframe2 <- data.frame(HighCelsius,LowCelsius,HighFahrenheit,LowFahrenheit) 
+names(dataframe2) <- c("ID","Color","Passed"); 
+View(dataframe2) 
 
 ```
 
 Use the common functions `summary` and `sd` to obtain basic data summaries of the ten-day forecast. How would you call these functions differently for the entire data frame vs. a single column? Attempt to demonstrate both options below.
 
 ```{r}
-
+summary(dataframe2)
+sd(dataframe2$HighCelsius)
 ```
 
 
@@ -130,15 +143,15 @@ If a package is already installed, you will need to load it every session. You c
 
 ```{r}
 # We will use the packages dplyr and ggplot2 regularly. 
-#install.packages("dplyr") 
-#install.packages("ggplot2")
+install.packages("dplyr") 
+install.packages("ggplot2")
 # comment out install commands, use only when needed and re-comment
 
 library(dplyr)
 library(ggplot2)
 
 # Some packages are umbrellas under which other packages are loaded
-#install.packages("tidyverse")
+install.packages("tidyverse")
 library(tidyverse)
 ```
 
