--- a/Assignments/A02_CodingBasics.Rmd
+++ b/Assignments/A02_CodingBasics.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 2: Coding Basics"
-author: "Student Name"
+author: "Xueying Feng"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
@@ -33,10 +33,18 @@ The completed exercise is due on Tuesday, January 21 at 1:00 pm.
 
 ```{r}
 #1. 
+Fours_1_100<-seq(1, 100, 4) # from 1 to 100, by 4
+Fours_1_100 # renamed the sequence
+
 
 #2. 
+mean(Fours_1_100) 
+median(Fours_1_100)
 
 #3. 
+mean(Fours_1_100) > median(Fours_1_100)
+mean(Fours_1_100) == median(Fours_1_100)
+# According to the results, mean is not greater than the median. They are equal.
 
 ```
 
@@ -51,12 +59,28 @@ The completed exercise is due on Tuesday, January 21 at 1:00 pm.
 8. Label the columns of your data frame with informative titles.
 
 ```{r}
+#a
+Names<-c("Lily","Bill","Kiki","Elsa") # character vector
+Names
+Scores<-c(80,70,95,45) # numeric vector
+Scores
+Name_Score <- data.frame(Names,Scores)
+Name_Score
+
+Pass <- function(Scores){
+  ifelse(Scores>50, print("true"),print("false"))
+}
+
+Score1 <- Pass(80); Score1
+Score2 <- Pass(70); Score2
+Score3 <- Pass(95); Score3
+Score4 <- Pass(45); Score4
 
 ```
 
 9. QUESTION: How is this data frame different from a matrix?
 
-> Answer: 
+> Answer: In a data frame, differnet columns can contain different types of data, but in a matrix, they are the same type of data
 
 10. Create a function with an if/else statement. Your function should determine whether a test score is a passing grade of 50 or above (TRUE or FALSE). You will need to choose either the `if` and `else` statements or the `ifelse` statement. Hint: Use `print`, not `return`. The name of your function should be informative.
 
@@ -64,8 +88,23 @@ The completed exercise is due on Tuesday, January 21 at 1:00 pm.
 
 ```{r}
 
+
+Pass <- function(Scores) {
+  if(Scores>50) {
+    print("true")
+  } 
+  else if (Scores<50) {
+    print("false")
+  }
+}
+
+Score1 <- Pass(80); Score1
+Score2 <- Pass(70); Score2
+Score3 <- Pass(95); Score3
+Score4 <- Pass(45); Score4
+
 ```
 
 12. QUESTION: Which option of `if` and `else` vs. `ifelse` worked? Why?
 
-> Answer: 
+> Answer: Bothe of them worked for this question, However, if there are more than two outcomes, `if` and `else ` should be used instead of `ifelse`.
