--- a/Lessons/05_DataExploration.Rmd
+++ b/Lessons/05_DataExploration.Rmd
@@ -31,7 +31,7 @@ library(tidyverse)
 # 3. Import datasets
 USGS.flow.data <- read.csv("./Data/Processed/USGS_Site02085000_Flow_Processed.csv")
 
-#View(USGS.flow.data)
+View(USGS.flow.data)
 # Alternate option: click on data frame in Environment tab
 
 colnames(USGS.flow.data)
@@ -71,11 +71,11 @@ Visualize distributions of values for continuous numerical variables. What is ha
 ggplot(USGS.flow.data) +
   geom_histogram(aes(x = discharge.mean))
 
-#
+# the width of the bins
 ggplot(USGS.flow.data) +
   geom_histogram(aes(x = discharge.mean), binwidth = 10)
 
-#
+# how many bins
 ggplot(USGS.flow.data) +
   geom_histogram(aes(x = discharge.mean), bins = 20)
 
@@ -83,10 +83,11 @@ ggplot(USGS.flow.data) +
 ggplot(USGS.flow.data, aes(x = discharge.mean)) +
   geom_histogram(binwidth = 10) + 
   scale_x_continuous(limits = c(0, 500))
-  
-#
-ggplot(USGS.flow.data) +
+
+# naming the plot, then need print (), or directly tyoe name
+gageplot<-ggplot(USGS.flow.data) +
   geom_histogram(aes(x = gage.height.mean))
+print(gageplot)
 
 ```
 ### Frequency line graph (function: geom_freqpoly)
@@ -94,14 +95,18 @@ ggplot(USGS.flow.data) +
 An alternate to a histogram is a frequency polygon graph (distributions of values for continuous numerical variables). Instead of displaying bars,  counts of continuous variables are displayed as lines. This is advantageous if you want to display multiple variables or categories of variables at once.
 
 ```{r, fig.height = 3, fig.width = 4}
-#
+# no legend
 ggplot(USGS.flow.data) +
   geom_freqpoly(aes(x = gage.height.mean), bins = 50) +
   geom_freqpoly(aes(x = gage.height.min), bins = 50, color = "darkgray") +
   geom_freqpoly(aes(x = gage.height.max), bins = 50,  lty = 2) +
   scale_x_continuous(limits = c(0, 10))
 
-#
+summary(USGS.flow.data$gage.height.max)
+summary(USGS.flow.data$gage.height.min)
+summary(USGS.flow.data$gage.height.mean)
+
+# add legend
 ggplot(USGS.flow.data) +
   geom_freqpoly(aes(x = gage.height.mean, color = gage.height.mean.approval), bins = 50) +
   scale_x_continuous(limits = c(0, 10)) +
@@ -127,14 +132,23 @@ An alternate option is a violin plot, which displays density distributions, some
 ggplot(USGS.flow.data) +
   geom_boxplot(aes(x = gage.height.mean.approval, y = gage.height.mean))
 
-#
+#Aesthetic mappings describe how variables in the data are mapped to visual properties (aesthetics) of geoms.
 ggplot(USGS.flow.data) +
   geom_boxplot(aes(x = gage.height.mean, y = discharge.mean, group = cut_width(gage.height.mean, 1)))
 
-#
+#A violin plot is a compact display of a continuous distribution. 
+#It is a blend of geom_boxplot() and geom_density(): 
+#a violin plot is a mirrored density plot displayed in the same way as a boxplot.
+#same area in total
 ggplot(USGS.flow.data) +
   geom_violin(aes(x = gage.height.mean.approval, y = gage.height.mean), 
-              draw_quantiles = c(0.25, 0.5, 0.75))
+              draw_quantiles = c(0.25, 0.5, 0.75), 
+              scale="area")
+
+ggplot(USGS.flow.data) +
+  geom_violin(aes(x = gage.height.mean.approval, y = gage.height.mean), 
+              draw_quantiles = c(0.25, 0.5, 0.75), 
+              scale="count")
 ```
 
 ### Scatterplot (function: geom_point)
